UCF-APR2.4/ftr main/force-app/main/default/objects/Quote/Quote.object-meta.xml
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>