UCF-APR2.4/ftr main/force-app/main/default/objects/Quote/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <description>Used to capture approval eligibility and status.</description>
    <inlineHelpText>Used to capture approval eligibility and status.</inlineHelpText>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Approval Required</fullName>
            </value>
            <value>
                <fullName>Pending Approval - ICB</fullName>
            </value>
            <value>
                <fullName>Pending Approval - RSM</fullName>
            </value>
            <value>
                <fullName>Pending Approval - Pricing</fullName>
            </value>
            <value>
                <fullName>Pending Approval - Product</fullName>
            </value>
            <value>
                <fullName>Pending Approval - Finance</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
                <isActive>false</isActive>
                <label>Pending Approval</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>