UCF-APR2.4/ftr main/force-app/main/default/objects/Quote/fields/Approval_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status_Date__c</fullName>
    <label>Approval Status Date</label>
    <type>Date</type>
</CustomField>