UCF-APR2.4/ftr main/force-app/main/default/objects/Quote/fields/Approved_One_Time_Total__c.field-meta.xml
<CustomField>
    <fullName>Approved_One_Time_Total__c</fullName>
    <label>Approved One Time Total</label>
    <summarizedField>QuoteLineItem.vlocity_cmt__EffectiveOneTimeTotal__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>