UCF-APR2.4/ftr main/force-app/main/default/objects/Quote/fields/Approved_Recurring_Total__c.field-meta.xml
<CustomField>
    <fullName>Approved_Recurring_Total__c</fullName>
    <label>Approved Recurring Total</label>
    <summarizedField>QuoteLineItem.Line_Approved_Recurring_Total__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>