UCF-APR2.4/ftr main/force-app/main/default/objects/Quote/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SE Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Vlocity_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>