UCF-APR2.4/ftr main/force-app/main/default/objects/Quote/fields/Contract_Signature__c.field-meta.xml
<CustomField>
    <fullName>Contract_Signature__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Signatory</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>