UCF-APR2.4/ftr main/force-app/main/default/objects/Quote/fields/Current_Communication_Needs__c.field-meta.xml
<CustomField>
    <fullName>Current_Communication_Needs__c</fullName>
    <inlineHelpText>Your Company&apos;s current communications capabilities include:</inlineHelpText>
    <label>Current Communication Needs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>