UCF-APR2.4/ftr main/force-app/main/default/objects/Quote/fields/Disconnect_Comments__c.field-meta.xml
<CustomField>
    <fullName>Disconnect_Comments__c</fullName>
    <label>Disconnect Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>