UCF-APR2.4/ftr main/force-app/main/default/objects/Quote/fields/Disconnect_Reason__c.field-meta.xml
<CustomField>
    <fullName>Disconnect_Reason__c</fullName>
    <label>Disconnect Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Closure - Business or Location</fullName>
            </value>
            <value>
                <fullName>Service No Longer Needed</fullName>
            </value>
            <value>
                <fullName>Cost Reduction - Customer Initiated</fullName>
            </value>
            <value>
                <fullName>Downgrade</fullName>
            </value>
            <value>
                <fullName>Order Entry Error - Incorrect/Missing S&amp;E</fullName>
            </value>
            <value>
                <fullName>Pricing - Competition</fullName>
            </value>
            <value>
                <fullName>Service Reliability - Repair Issues</fullName>
            </value>
            <value>
                <fullName>Technology Not Available</fullName>
            </value>
            <value>
                <fullName>Temporary - Seasonal/Vacation Services</fullName>
            </value>
            <value>
                <fullName>Upgrade</fullName>
            </value>
            <value>
                <fullName>Collections/Non-Pay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>