UCF-APR2.4/ftr main/force-app/main/default/objects/Quote/fields/Disconnect_Type__c.field-meta.xml
<CustomField>
    <fullName>Disconnect_Type__c</fullName>
    <label>Disconnect Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Product Availability</fullName>
            </value>
            <value>
                <fullName>Service Quality</fullName>
            </value>
            <value>
                <fullName>Site Closure/Move</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>