UCF-APR2.4/ftr main/force-app/main/default/objects/Quote/fields/EVPL_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>EVPL_Product_Type__c</fullName>
    <label>EVPL Product Type</label>
    <summaryFilterItems>
        <field>QuoteLineItem.Product_Type__c</field>
        <operation>equals</operation>
        <value>EVPL</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>