UCF-APR2.4/ftr main/force-app/main/default/objects/Quote/fields/Final_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Approval_Date__c</fullName>
    <label>Final Approval Date</label>
    <type>Date</type>
</CustomField>