UCF-APR2.4/ftr main/force-app/main/default/objects/Quote/fields/Final_Rejection_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Rejection_Date__c</fullName>
    <label>Final Rejection Date</label>
    <type>Date</type>
</CustomField>