UCF-APR2.4/ftr main/force-app/main/default/objects/Quote/fields/ftr_Approval_Type__c.field-meta.xml
<CustomField>
    <fullName>ftr_Approval_Type__c</fullName>
    <description>Ftr Approval Type</description>
    <label>ftr Approval Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>