UCF-APR2.4/ftr main/force-app/main/default/objects/Quote/fields/ftr_NumberOfLocations__c.field-meta.xml
<CustomField>
    <fullName>ftr_NumberOfLocations__c</fullName>
    <label>Number of Locations</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>