UCF-APR2.4/ftr main/force-app/main/default/objects/Quote/fields/ftr_QuoteCreationStatus__c.field-meta.xml
<CustomField>
    <fullName>ftr_QuoteCreationStatus__c</fullName>
    <label>Quote Creation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>