UCF-APR2.4/ftr main/force-app/main/default/objects/Quote/fields/ftr_QuoteType__c.field-meta.xml
<CustomField>
    <fullName>ftr_QuoteType__c</fullName>
    <label>Quote Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Install</fullName>
                <default>true</default>
                <label>Install</label>
            </value>
            <value>
                <fullName>Change</fullName>
            </value>
            <value>
                <fullName>Price Change</fullName>
            </value>
            <value>
                <fullName>Move</fullName>
            </value>
            <value>
                <fullName>Disconnect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>