UCF-APR2.4/ftr main/force-app/main/default/objects/Quote/fields/Immediate_and_Future_Communication_Needs__c.field-meta.xml
<CustomField>
    <fullName>Immediate_and_Future_Communication_Needs__c</fullName>
    <inlineHelpText>Your immediate and future communications needs are:</inlineHelpText>
    <label>Immediate and Future Communication Needs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>