UCF-APR2.4/ftr main/force-app/main/default/objects/Quote/fields/IsEasyPass__c.field-meta.xml
<CustomField>
    <fullName>IsEasyPass__c</fullName>
    <formula>RecordType.DeveloperName == &apos;EasyPass_Quote&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsEasyPass</label>
    <type>Checkbox</type>
</CustomField>