UCF-APR2.4/ftr main/force-app/main/default/objects/Quote/fields/IsSyncing__c.field-meta.xml
<CustomField>
    <fullName>IsSyncing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used for the vlocity hybrid quote initiative. Determines whether the quote is synced with the opportunity.</description>
    <label>IsSyncing</label>
    <type>Checkbox</type>
</CustomField>