UCF-APR2.4/ftr main/force-app/main/default/objects/Quote/fields/Number_of_Quotes__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Quotes__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Quotes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>