UCF-APR2.4/ftr main/force-app/main/default/objects/Quote/fields/OmniscriptData__c.field-meta.xml
<CustomField>
    <fullName>OmniscriptData__c</fullName>
    <description>Used to store OS data.</description>
    <label>OmniscriptData</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>