UCF-APR2.4/ftr main/force-app/main/default/objects/Quote/fields/Order_Opportunity_Unlocked__c.field-meta.xml
<CustomField>
    <fullName>Order_Opportunity_Unlocked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Order Opportunity Unlocked</label>
    <type>Checkbox</type>
</CustomField>