UCF-APR2.4/ftr main/force-app/main/default/objects/Quote/fields/Product_Type_for_Order__c.field-meta.xml
<CustomField>
    <fullName>Product_Type_for_Order__c</fullName>
    <formula>IF(AND( EVPL_Product_Type__c &gt;0, EIA_Product_Type__c = 0), &quot;EVPL&quot;, &quot;EIA&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Type for Order</label>
    <type>Text</type>
</CustomField>