UCF-APR2.4/ftr main/force-app/main/default/objects/Quote/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <description>This field is used to show which products are being quoted.</description>
    <label>Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EIA</fullName>
            </value>
            <value>
                <fullName>EVPL</fullName>
            </value>
            <value>
                <fullName>SDWAN</fullName>
            </value>
            <value>
                <fullName>UCF</fullName>
            </value>
            <value>
                <fullName>UCaaS</fullName>
            </value>
            <value>
                <fullName>CCaaS</fullName>
            </value>
            <value>
                <fullName>Private Network</fullName>
            </value>
            <value>
                <fullName>SIP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>