UCF-APR2.4/ftr main/force-app/main/default/objects/Quote/fields/Promo_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Promo_Campaign__c</fullName>
    <label>Promo Campaign</label>
    <length>50</length>
    <type>Text</type>
</CustomField>