UCF-APR2.4/ftr main/force-app/main/default/objects/Quote/fields/RCDeviceCount__c.field-meta.xml
<CustomField>
    <fullName>RCDeviceCount__c</fullName>
    <description>This field will aggregate the quantities of child RC phones for the EPC Rules.</description>
    <label>RC Device Count</label>
    <summarizedField>QuoteLineItem.Quantity</summarizedField>
    <summaryFilterItems>
        <field>QuoteLineItem.VlocityType__c</field>
        <operation>equals</operation>
        <value>Phones</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>QuoteLineItem.VlocitySubType__c</field>
        <operation>equals</operation>
        <value>RingCentral</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>