UCF-APR2.4/ftr main/force-app/main/default/objects/Quote/fields/RCIsMultilocationQuote__c.field-meta.xml
<CustomField>
    <fullName>RCIsMultilocationQuote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RC Is MultiLocation Quote</label>
    <type>Checkbox</type>
</CustomField>