UCF-APR2.4/ftr main/force-app/main/default/objects/Quote/fields/RCLicenseCount__c.field-meta.xml
<CustomField>
    <fullName>RCLicenseCount__c</fullName>
    <description>This field will aggregate the quantities of RC license products for the EPC Rules.</description>
    <label>RC License Count</label>
    <summarizedField>QuoteLineItem.Quantity</summarizedField>
    <summaryFilterItems>
        <field>QuoteLineItem.VlocityFamily__c</field>
        <operation>equals</operation>
        <value>Licenses</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>QuoteLineItem.VlocitySubType__c</field>
        <operation>equals</operation>
        <value>RingCentral</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>