UCF-APR2.4/ftr main/force-app/main/default/objects/Quote/fields/Requested_Disconnect_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Disconnect_Date__c</fullName>
    <label>Requested Disconnect Date</label>
    <type>Date</type>
</CustomField>