UCF-APR2.4/ftr main/force-app/main/default/objects/Quote/fields/Requested_Recurring_Total__c.field-meta.xml
<CustomField>
    <fullName>Requested_Recurring_Total__c</fullName>
    <label>Requested Recurring Total</label>
    <summarizedField>QuoteLineItem.Line_Requested_Recurring_total__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>