UCF-APR2.4/ftr main/force-app/main/default/objects/Quote/fields/RequestedDate__c.field-meta.xml
<CustomField>
    <fullName>RequestedDate__c</fullName>
    <label>Date of Request</label>
    <type>Date</type>
</CustomField>