UCF-APR2.4/ftr main/force-app/main/default/objects/Quote/fields/RSM_Approver__c.field-meta.xml
<CustomField>
    <fullName>RSM_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RSM Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>