UCF-APR2.4/ftr main/force-app/main/default/objects/Quote/fields/Schedule_Date__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Date__c</fullName>
    <label>Schedule Date</label>
    <type>Date</type>
</CustomField>