UCF-APR2.4/ftr main/force-app/main/default/objects/Quote/fields/Schedule_Number__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Number__c</fullName>
    <displayFormat>S-5555{000000}</displayFormat>
    <label>Schedule Number</label>
    <type>AutoNumber</type>
</CustomField>