UCF-APR2.4/ftr main/force-app/main/default/objects/Quote/fields/Schedule_Type_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Type_Purpose__c</fullName>
    <defaultValue>&quot;Order For New Services&quot;</defaultValue>
    <label>Schedule Type Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Order for New Services</fullName>
                <default>true</default>
                <label>Order for New Services</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>