UCF-APR2.4/ftr main/force-app/main/default/objects/Quote/fields/SE_Approver_Manager__c.field-meta.xml
<CustomField>
    <fullName>SE_Approver_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SE Approver Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Vlocity_Quotes1</relationshipName>
    <type>Lookup</type>
</CustomField>