UCF-APR2.4/ftr main/force-app/main/default/objects/Quote/fields/SelectedLocations__c.field-meta.xml
<CustomField>
    <fullName>SelectedLocations__c</fullName>
    <label>SelectedLocations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>