UCF-APR2.4/ftr main/force-app/main/default/objects/Quote/fields/Sent_for_SE_Review__c.field-meta.xml
<CustomField>
    <fullName>Sent_for_SE_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sent for SE Review</label>
    <type>Checkbox</type>
</CustomField>