UCF-APR2.4/ftr main/force-app/main/default/objects/Quote/fields/Service_Term__c.field-meta.xml
<CustomField>
    <fullName>Service_Term__c</fullName>
    <label>Service Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>12 Months</fullName>
            </value>
            <value>
                <fullName>24 Months</fullName>
            </value>
            <value>
                <fullName>36 Months</fullName>
            </value>
            <value>
                <fullName>60 Months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>