UCF-APR2.4/ftr main/force-app/main/default/objects/Quote/fields/Submit_For_Approval_Condition__c.field-meta.xml
<CustomField>
    <fullName>Submit_For_Approval_Condition__c</fullName>
    <formula>IF(INCLUDES(Products__c, &apos;E-LAN&apos;),IF(Sent_for_SE_Review__c=true,&apos;Show&apos;,&apos;Hide&apos;),&apos;Show&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Submit For Approval Condition</label>
    <type>Text</type>
</CustomField>