UCF-APR2.4/ftr main/force-app/main/default/objects/Quote/fields/vlocity_cmt__CreditCheckDecision__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__CreditCheckDecision__c</fullName>
    <description>Stores the result of the credit check.</description>
    <label>Credit Check Decision</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
                <default>true</default>
                <label>Accepted</label>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Accepted-Reference</fullName>
            </value>
            <value>
                <fullName>Accept-Deposit</fullName>
            </value>
            <value>
                <fullName>Accepted-Upsell</fullName>
            </value>
            <value>
                <fullName>Accepted-Downsale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>