UCF-APR2.4/ftr main/force-app/main/default/objects/Quote/fields/vlocity_cmt__DefaultBillingAccountId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__DefaultBillingAccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Billing Account Quotes</relationshipLabel>
    <relationshipName>BillingAccountQuotes</relationshipName>
    <type>Lookup</type>
</CustomField>