UCF-APR2.4/ftr main/force-app/main/default/objects/Quote/fields/vlocity_cmt__DefaultPremisesId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__DefaultPremisesId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The default Premises associated with this quote</description>
    <label>Premises</label>
    <referenceTo>vlocity_cmt__Premises__c</referenceTo>
    <relationshipLabel>Premises Quotes</relationshipLabel>
    <relationshipName>PremisesQuotes</relationshipName>
    <type>Lookup</type>
</CustomField>