UCF-APR2.4/ftr main/force-app/main/default/objects/Quote/fields/vlocity_cmt__DefaultServicePointId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__DefaultServicePointId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The default Service Point associated with this quote</description>
    <label>Service Point</label>
    <referenceTo>vlocity_cmt__ServicePoint__c</referenceTo>
    <relationshipLabel>Service Point Quotes</relationshipLabel>
    <relationshipName>ServicePointQuotes</relationshipName>
    <type>Lookup</type>
</CustomField>