UCF-APR2.4/ftr main/force-app/main/default/objects/Quote/fields/vlocity_cmt__EffectiveBaseRecurringCharge__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__EffectiveBaseRecurringCharge__c</fullName>
    <description>Roll up of the recurring charges of the quote line items before applying adjustments.</description>
    <label>Effective Total: Base Recurring Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>