UCF-APR2.4/ftr main/force-app/main/default/objects/Quote/fields/vlocity_cmt__EffectiveUsageCostTotal__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__EffectiveUsageCostTotal__c</fullName>
    <description>Effective Usage Cost Total</description>
    <label>Usage Cost Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>