UCF-APR2.4/ftr main/force-app/main/default/objects/Quote/fields/vlocity_cmt__ExternalPricingStatus__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__ExternalPricingStatus__c</fullName>
    <description>This field is to keep track of external pricing status.</description>
    <label>External Pricing Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Ready</fullName>
                <default>true</default>
                <label>Not Ready</label>
            </value>
            <value>
                <fullName>Ready</fullName>
            </value>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Request Confirmed</fullName>
            </value>
            <value>
                <fullName>Invalidated</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>