UCF-APR2.4/ftr main/force-app/main/default/objects/Quote/fields/vlocity_cmt__IsValidated__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__IsValidated__c</fullName>
    <formula>NOT(ISNULL(vlocity_cmt__ValidationDate__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Validated</label>
    <type>Checkbox</type>
</CustomField>